Fix tile description to not overflow #7

--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -15,6 +15,10 @@ h2 {
   text-align: center;
 }
 
+h5 {
+  white-space: nowrap;
+}
+
 main {
   background: #fff;
   min-height: 100%;
